@@ -130,6 +130,7 @@ void Game_clock::increment
 	hour %= 24;
 					// Update palette to new time.
 	set_time_palette();
+	Dead_body::decay(get_total_hours());
 	int new_3hour = hour/3;		// New 3-hour period.
 	if (new_3hour != old_3hour)	// In a new period?
 					// Update NPC schedules.
@@ -158,6 +159,7 @@ void Game_clock::handle_event
 			day++;
 			}
 		set_time_palette();
+		Dead_body::decay(get_total_hours());
 		if (hour%3 == 0)	// New 3-hour period?
 			{
 			check_hunger();	// Use food, and print complaints.
@@ -186,11 +188,14 @@ void Game_clock::fake_next_period
 	)
 	{
 	minute = 0;
-	hour = ((hour/3 + 1)*3)%24;
+	hour = ((hour/3 + 1)*3);
+	day += hour/24;			// Update day.
+	hour %= 24;
 	Game_window *gwin = Game_window::get_game_window();
 	set_time_palette();
 	check_hunger();
 	gwin->schedule_npcs(hour/3);
+	Dead_body::decay(get_total_hours());
 	cout << "The hour is now " << hour << endl;
 	}
 
